workspace/DevP360/src/objects/Ehr_Clinical_Note__c.object
<CustomObject>
    <description>This object will hold many different categories of clinical notes:  Discharge Summaries, Advance Directives, Progress Notes, H&amp;P Notes, SOAP Notes, etc.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Clinical Notes</relationshipLabel>
        <relationshipName>Clinical_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Encounter_ID_Label__c</fullName>
        <label>Encounter ID Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encounter_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EHR Encounter</label>
        <referenceTo>HealthCloudGA__EhrEncounter__c</referenceTo>
        <relationshipLabel>Clinical Notes</relationshipLabel>
        <relationshipName>Clinical_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Note_Categorhy__c</fullName>
        <label>Note Categorhy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_Date_Time__c</fullName>
        <label>Note Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Note_Line_Number__c</fullName>
        <label>Note Line Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Note_Purpose__c</fullName>
        <label>Note Purpose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_SubCategory__c</fullName>
        <label>Note SubCategory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_Text__c</fullName>
        <label>Note Text</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source_System_Id__c</fullName>
        <externalId>true</externalId>
        <label>Source System Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System_MRN__c</fullName>
        <label>Source System MRN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>EHR Clinical Note</label>
    <nameField>
        <label>Ehr Clinical Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clinical Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>